--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,37 +1,55 @@
 <%- include('partials/header') -%>
-<div class="container">
-  <div class="row justify-content-center mt-5">
-    <div class="col-6">
-      <h2><%= post.title %></h2>
-      <img class="img-fluid" src="<%= post.image%>" />
-      <div class="row justify-content-between">
-        <form
-          class="col-1"
-          action="/post/likePost/<%= post.id %>?_method=PUT"
-          method="POST"
-        >
-          <button class="btn btn-primary fa fa-heart" type="submit"></button>
+  <div class="container">
+    <div class="row justify-content-center mt-5">
+      <div class="col-6">
+        <h2>
+          <%= post.title %>
+        </h2>
+        <img class="img-fluid" src="<%= post.image%>" />
+        <div class="row justify-content-between">
+          <form class="col-1" action="/post/likePost/<%= post.id %>?_method=PUT" method="POST">
+            <button class="btn btn-primary fa fa-heart" type="submit"></button>
+          </form>
+          <h3 class="col-3">Likes: <%= post.likes %>
+          </h3>
+          <%if(post.user==user.id){ %>
+            <form action="/post/deletePost/<%= post.id %>?_method=DELETE" method="POST" class="col-3">
+              <button class="btn btn-primary fa fa-trash" type="submit"></button>
+            </form>
+            <%}%>
+        </div>
+      </div>
+      <div class="col-3 mt-5">
+        <p>
+          <%= post.caption %>
+        </p>
+        <div class="col-6 mt-5">
+          <ul>
+            <% comments.forEach(el=> { %>
+              <li class="">
+                <%= el.comment %>
+                  <%= el.likes %>
+
+                    <form action="/comment/likeComment/<%= el._id %>?_method=PUT" method="POST">
+                      <button class="btn btn-primary fa fa-thumbs-up" type="submit"></button>
+                    </form>
+              </li>
+              <% }) %>
+          </ul>
+        </div>
+
+        <form action="/comment/addComment/<%= post.id %>" method="post">
+          <label for="comment" class="form-label">Add Comment</label>
+          <input type="text" class="form-control" id="comment" name="comment">
+          <button class="btn btn-primary" type="submit">Submit</button>
         </form>
-        <h3 class="col-3">Likes: <%= post.likes %></h3>
-        <%if(post.user == user.id){ %>
-        <form
-          action="/post/deletePost/<%= post.id %>?_method=DELETE"
-          method="POST"
-          class="col-3"
-        >
-          <button class="btn btn-primary fa fa-trash" type="submit"></button>
-        </form>
-        <%}%>
+
+      </div>
+      <div class="col-6 mt-5">
+        <a class="btn btn-primary" href="/profile">Return to Profile</a>
+        <a class="btn btn-primary" href="/feed">Return to Feed</a>
       </div>
     </div>
-    <div class="col-3 mt-5">
-      <p><%= post.caption %></p>
-    </div>
-    <div class="col-6 mt-5">
-      <a class="btn btn-primary" href="/profile">Return to Profile</a>
-      <a class="btn btn-primary" href="/feed">Return to Feed</a>
-    </div>
   </div>
-</div>
 
-<%- include('partials/footer') -%>
+  <%- include('partials/footer') -%>
